--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,14 @@
     "import seaborn as sns\n",
     "from sklearn import svm\n",
     "from matplotlib import pyplot\n",
-    "from scipy.optimize import least_squares"
+    "from scipy.optimize import least_squares\n",
+    "import pickle\n",
+    "from sklearn.metrics import classification_report, confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,100 +49,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fit_opr_dpr(games, num_teams):\n",
-    "    \"\"\"\n",
-    "    Solve for the Offensive Power Rating (OPR) and Defensive Power Rating (DPR) for each team.\n",
-    "    \n",
-    "    :param games: List of tuples (team_A, team_B, score_A, score_B)\n",
-    "    :param num_teams: Total number of teams\n",
-    "    :return: OPR and DPR arrays\n",
-    "    \"\"\"\n",
-    "    params = np.zeros(2 * num_teams)\n",
-    "    \n",
-    "    def loss_function(x):\n",
-    "        opr = x[:num_teams]\n",
-    "        dpr = x[num_teams:]\n",
-    "        residuals = []\n",
-    "        \n",
-    "        for team_A, team_B, score_A, score_B in games:\n",
-    "            pred_A = opr[team_A] - dpr[team_B]\n",
-    "            pred_B = opr[team_B] - dpr[team_A]\n",
-    "            residuals.append(pred_A - score_A)\n",
-    "            residuals.append(pred_B - score_B)\n",
-    "        \n",
-    "        return np.array(residuals)\n",
-    "    \n",
-    "    return least_squares(loss_function, params)"
+    "with open(\"result.pkl\", \"rb\") as f:\n",
+    "    x, opr, dpr, residuals = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "games = data[[\"team_id\", \"opponent_team_id\", \"team_score\", \"opponent_team_score\"]].to_numpy()"
+    "pt_opr = opr[:, 15]\n",
+    "pt_dpr = dpr[:, 15]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = fit_opr_dpr(games, len(teams))"
+    "expected_score = pt_opr[data[\"team_id\"]] - pt_dpr[data[\"opponent_team_id\"]]\n",
+    "opp_expected_score = pt_opr[data[\"opponent_team_id\"]] - pt_dpr[data[\"team_id\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "with open(\"result.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(result, f)"
+    "pred = expected_score > opp_expected_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scores = result.x - result.x.min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "137"
+       "array([[4196, 1023],\n",
+       "       [1024, 4195]])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[\"team_score\"].max()"
+    "confusion_matrix(data[\"win\"], pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.80      0.80      0.80      5219\n",
+      "        True       0.80      0.80      0.80      5219\n",
+      "\n",
+      "    accuracy                           0.80     10438\n",
+      "   macro avg       0.80      0.80      0.80     10438\n",
+      "weighted avg       0.80      0.80      0.80     10438\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(data[\"win\"], pred))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1139,7 +1129,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "experimental",
    "language": "python",
    "name": "python3"
   },
@@ -1153,7 +1143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
