--- a/main.ipynb
+++ b/main.ipynb
@@ -127,8 +127,25 @@
     "    if not team.empty:\n",
     "        rankings[team.iloc[0]['region']].append([team.iloc[0]['team'], ccwm])\n",
     "\n",
-    "rankings = {key: sorted(value, key=lambda x: x[1], reverse=True)[:16] for key, value in rankings.items()}\n",
-    "print(rankings)"
+    "# rankings = {key: sorted(value, key=lambda x: x[1], reverse=True)[:16] for key, value in rankings.items()}\n",
+    "# print(rankings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10438\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(data))"
    ]
   },
   {
